--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "crash-course",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Learning NodeJS project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andreas Hansson",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.0"
+  }
 }
